exercises/ex3_external_mongodb/ex_chart/templates/mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app.kubernetes.io/name: mongo-express
  type: ClusterIP
  # type: LoadBalancer    # <-- external service
  # type: NodePort
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      # nodePort: 30000 # <-- external port between [30000 - 32767]
